--- a/base_di_partenza/index.html
+++ b/base_di_partenza/index.html
@@ -40,5 +40,111 @@
         <img id="m-pic" src="m.svg" alt="animated M" />
       </div>
     </section>
+    <main>
+      <div id="main-content">
+        <div class="trending-on-medium">
+          <img src="assets/imgs/svg/trending.svg" alt="trending image" />
+          <h2>Trending on medium</h2>
+        </div>
+        <div class="trending-articles">
+          <div class="one-trending-article">
+            <div class="trending-article-num">
+              <p>01</p>
+            </div>
+            <div class="trending-article-content">
+              <div class="trending-article-author-box">
+                <img class="trending-article-img" src="assets/imgs/image01.jpeg" alt="author1" />
+                <p class="trending-article-author">Tom Cooper</p>
+              </div>
+              <h3 class="trending-article-title">Ukraine War, 23 October 2022</h3>
+              <p class="trending-article-date">Oct 23</p>
+            </div>
+            <div class="trending-article-reading-time">
+              <p>5 min read</p>
+            </div>
+          </div>
+          <div class="one-trending-article">
+            <div class="trending-article-num">
+              <p>02</p>
+            </div>
+            <div class="trending-article-content">
+              <div class="trending-article-author-box">
+                <img class="trending-article-img" src="assets/imgs/image02.png" alt="author1" />
+                <p class="trending-article-author">Arthur Hayes in Entrepreneur's Handbook</p>
+              </div>
+              <h3 class="trending-article-title">Comeback</h3>
+              <p class="trending-article-date">Oct 26</p>
+            </div>
+            <div class="trending-article-reading-time">
+              <p>24 min read</p>
+            </div>
+          </div>
+          <div class="one-trending-article">
+            <div class="trending-article-num">
+              <p>03</p>
+            </div>
+            <div class="trending-article-content">
+              <div class="trending-article-author-box">
+                <img class="trending-article-img" src="assets/imgs/image03.jpeg" alt="author1" />
+                <p class="trending-article-author">Tom Cooper</p>
+              </div>
+              <h3 class="trending-article-title">How I Learned To Love My Breasts Even Though One Is A Horcrux For Voldemort</h3>
+              <p class="trending-article-date">Oct 26</p>
+            </div>
+            <div class="trending-article-reading-time">
+              <p>2 min read</p>
+            </div>
+          </div>
+          <div class="one-trending-article">
+            <div class="trending-article-num">
+              <p>04</p>
+            </div>
+            <div class="trending-article-content">
+              <div class="trending-article-author-box">
+                <img class="trending-article-img" src="assets/imgs/image04.png" alt="author1" />
+                <p class="trending-article-author">Frank Mastropolo in The Riffk</p>
+              </div>
+              <h3 class="trending-article-title">The Night Paul McCartney Donned a Disguise at Fillmore East</h3>
+              <p class="trending-article-date">Oct 22</p>
+            </div>
+            <div class="trending-article-reading-time">
+              <p>3 min read</p>
+            </div>
+          </div>
+          <div class="one-trending-article">
+            <div class="trending-article-num">
+              <p>05</p>
+            </div>
+            <div class="trending-article-content">
+              <div class="trending-article-author-box">
+                <img class="trending-article-img" src="assets/imgs/image05.jpeg" alt="author1" />
+                <p class="trending-article-author">Frank Andrade in Towards Data Science</p>
+              </div>
+              <h3 class="trending-article-title">5 Python Projects to Automate Your Life: From Beginner to Advanced</h3>
+              <p class="trending-article-date">Oct 13</p>
+            </div>
+            <div class="trending-article-reading-time">
+              <p>6 min read</p>
+            </div>
+          </div>
+          <div class="one-trending-article">
+            <div class="trending-article-num">
+              <p>06</p>
+            </div>
+            <div class="trending-article-content">
+              <div class="trending-article-author-box">
+                <img class="trending-article-img" src="assets/imgs/image06.png" alt="author1" />
+                <p class="trending-article-author">Wesley Smits in Javascript in Plain English</p>
+              </div>
+              <h3 class="trending-article-title">How To Make Visual Studio Code Look Amazing</h3>
+              <p class="trending-article-date">Oct 20</p>
+            </div>
+            <div class="trending-article-reading-time">
+              <p>7 min read</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </main>
   </body>
 </html>
