--- a/base_di_partenza/index.html
+++ b/base_di_partenza/index.html
@@ -146,5 +146,146 @@
         </div>
       </div>
     </main>
+    <section class="more-articles">
+      <div id="latest-articles">
+        <div class="one-latest-article">
+          <div class="latest-article-text">
+            <div class="trending-article-author-box">
+              <img class="trending-article-img" src="assets/imgs/image07.jpeg" alt="author1" />
+              <p class="trending-article-author">Robert Roy Britt</p>
+            </div>
+
+            <h3>How Old is Old?</h3>
+            <p class="article-text">What we consider "old" changes dramatically with age, and our perspectives can be predictive of how well we age</p>
+            <div class="end-of-latest">
+              <p>Oct 27 • 5 min read • <span>Aging</span></p>
+              <div class="star"><img src="assets/imgs/svg/star.svg" alt="star" /></div>
+              <img src="assets/imgs/svg/bookmark.svg" alt="add to favourites" />
+            </div>
+          </div>
+          <div class="latest-articles-img">
+            <img src="assets/imgs/image08.jpeg" alt="article image" />
+          </div>
+        </div>
+        <div class="one-latest-article">
+          <div class="latest-article-text">
+            <div class="trending-article-author-box">
+              <img class="trending-article-img" src="assets/imgs/image09.jpeg" alt="author2" />
+              <p class="trending-article-author">Taru Anniina Liikanen</p>
+            </div>
+
+            <h3>Is Taylor Swift Allowed to Speak About Fat?</h3>
+            <p class="article-text">Can you speak about your trauma if you don't look traumatized?</p>
+            <div class="end-of-latest">
+              <p>Oct 24 • 6 min read • <span>Health</span></p>
+              <div class="star"><img src="assets/imgs/svg/star.svg" alt="star" /></div>
+              <img src="assets/imgs/svg/bookmark.svg" alt="add to favourites" />
+            </div>
+          </div>
+          <div class="latest-articles-img">
+            <img src="assets/imgs/image10.jpeg" alt="article image" />
+          </div>
+        </div>
+        <div class="one-latest-article">
+          <div class="latest-article-text">
+            <div class="trending-article-author-box">
+              <img class="trending-article-img" src="assets/imgs/image11.jpeg" alt="author3" />
+              <p class="trending-article-author">David Rodenas, Ph. D.</p>
+            </div>
+
+            <h3>Don't Screw Up, You Will Be Found Guilty</h3>
+            <p class="article-text">Software Engineer, yours is the right to produce high-quality work at all times, also the liability.</p>
+            <div class="end-of-latest">
+              <p>Oct 15 • 5 min read • <span>Software Engineering</span></p>
+              <div class="star"><img src="assets/imgs/svg/star.svg" alt="star" /></div>
+              <img src="assets/imgs/svg/bookmark.svg" alt="add to favourites" />
+            </div>
+          </div>
+          <div class="latest-articles-img">
+            <img src="assets/imgs/image12.png" alt="article image" />
+          </div>
+        </div>
+        <div class="one-latest-article">
+          <div class="latest-article-text">
+            <div class="trending-article-author-box">
+              <img class="trending-article-img" src="assets/imgs/image13.png" alt="author4" />
+              <p class="trending-article-author">Microsoft Design</p>
+            </div>
+
+            <h3>Leave No Trace</h3>
+            <p class="article-text">How product designers can break from the status quo and help our planet</p>
+            <div class="end-of-latest">
+              <p>Oct 25 • 11 min read • <span>Sustainability</span></p>
+              <div class="star"><img src="assets/imgs/svg/star.svg" alt="star" /></div>
+              <img src="assets/imgs/svg/bookmark.svg" alt="add to favourites" />
+            </div>
+          </div>
+          <div class="latest-articles-img">
+            <img src="assets/imgs/image14.png" alt="article image" />
+          </div>
+        </div>
+        <div class="one-latest-article">
+          <div class="latest-article-text">
+            <div class="trending-article-author-box">
+              <img class="trending-article-img" src="assets/imgs/image15.jpeg" alt="author5" />
+              <p class="trending-article-author">Scott H. Young</p>
+            </div>
+
+            <h3>Variability, Not Repetition, is the Key to Mastery</h3>
+            <p class="article-text">
+              Bruce Lee is reported to have said, "I fear not the man who has practiced 10,000 kicks once, but the man who has practiced one...
+            </p>
+            <div class="end-of-latest">
+              <p>Oct 26 • 7 min read • <span>Health</span></p>
+              <div class="star"><img src="assets/imgs/svg/star.svg" alt="star" /></div>
+              <img src="assets/imgs/svg/bookmark.svg" alt="add to favourites" />
+            </div>
+          </div>
+          <div class="latest-articles-img">
+            <img src="assets/imgs/image16.jpg" alt="article image" />
+          </div>
+        </div>
+        <div class="one-latest-article">
+          <div class="latest-article-text">
+            <div class="trending-article-author-box">
+              <img class="trending-article-img" src="assets/imgs/image17.png" alt="author6" />
+              <p class="trending-article-author">Paul A. DeStefano in Human Parts</p>
+            </div>
+
+            <h3>What I Overheard as an Escape Room Actor</h3>
+            <p class="article-text">Lock a group of people in a room and you'll witness some surprising confessions</p>
+            <div class="end-of-latest">
+              <p>Jan 18 • 6 min read • <span>Experiences</span></p>
+              <div class="star"><img src="assets/imgs/svg/star.svg" alt="star" /></div>
+              <img src="assets/imgs/svg/bookmark.svg" alt="add to favourites" />
+            </div>
+          </div>
+          <div class="latest-articles-img">
+            <img src="assets/imgs/image18.jpeg" alt="article image" />
+          </div>
+        </div>
+        <div class="one-latest-article">
+          <div class="latest-article-text">
+            <div class="trending-article-author-box">
+              <img class="trending-article-img" src="assets/imgs/image19.jpeg" alt="author7" />
+              <p class="trending-article-author">Kim Scott</p>
+            </div>
+
+            <h3>6 Steps for Setting Measurable Goals to Avoid "Productivity Paranoia"</h3>
+            <p class="article-text">
+              With more people working in remote and hybrid environments than ever before, company, team, and individual goals must be explicit...
+            </p>
+            <div class="end-of-latest">
+              <p>Oct 24 • 6 min read • <span>Health</span></p>
+              <div class="star"><img src="assets/imgs/svg/star.svg" alt="star" /></div>
+              <img src="assets/imgs/svg/bookmark.svg" alt="add to favourites" />
+            </div>
+          </div>
+          <div class="latest-articles-img">
+            <img src="assets/imgs/image20.jpg" alt="article image" />
+          </div>
+        </div>
+      </div>
+    </section>
   </body>
 </html>
