--- a/base_di_partenza/index.html
+++ b/base_di_partenza/index.html
@@ -286,6 +286,20 @@
           </div>
         </div>
       </div>
+      <aside>
+        <h2>Discover more of what matters to you</h2>
+        <div>
+          <a href="#">Programming</a>
+          <a href="#">Data Science</a>
+          <a href="#">Technology</a>
+          <a href="#">Self Improvement</a>
+          <a href="#">Writing</a>
+          <a href="#">Relationships</a>
+          <a href="#">Machine Learning</a>
+          <a href="#">Productivity</a>
+          <a href="#">Politics</a>
+        </div>
+      </aside>
     </section>
   </body>
 </html>
