--- a/base_di_partenza/index.html
+++ b/base_di_partenza/index.html
@@ -288,16 +288,30 @@
       </div>
       <aside>
         <h2>Discover more of what matters to you</h2>
-        <div>
-          <a href="#">Programming</a>
-          <a href="#">Data Science</a>
-          <a href="#">Technology</a>
-          <a href="#">Self Improvement</a>
-          <a href="#">Writing</a>
-          <a href="#">Relationships</a>
-          <a href="#">Machine Learning</a>
-          <a href="#">Productivity</a>
-          <a href="#">Politics</a>
+        <div class="tags">
+          <ul>
+            <li>Programming</li>
+            <li>Data Science</li>
+            <li>Technology</li>
+            <li>Self Improvement</li>
+            <li>Writing</li>
+            <li>Relationships</li>
+            <li>Machine Learning</li>
+            <li>Productivity</li>
+            <li>Politics</li>
+          </ul>
+        </div>
+        <hr />
+        <div class="useful-links">
+          <a href="#">Help</a>
+          <a href="#">Status</a>
+          <a href="#">Writers</a>
+          <a href="#">Blog</a>
+          <a href="#">Careers</a>
+          <a href="#">Privacy</a>
+          <a href="#">Terms</a>
+          <a href="#">About</a>
+          <a href="#">Knowable</a>
         </div>
       </aside>
     </section>
