fixed navbar and sticky aside

--- a/base_di_partenza/index.html
+++ b/base_di_partenza/index.html
@@ -287,31 +287,33 @@
         </div>
       </div>
       <aside>
-        <h2>Discover more of what matters to you</h2>
-        <div class="tags">
-          <ul>
-            <li>Programming</li>
-            <li>Data Science</li>
-            <li>Technology</li>
-            <li>Self Improvement</li>
-            <li>Writing</li>
-            <li>Relationships</li>
-            <li>Machine Learning</li>
-            <li>Productivity</li>
-            <li>Politics</li>
-          </ul>
-        </div>
-        <hr />
-        <div class="useful-links">
-          <a href="#">Help</a>
-          <a href="#">Status</a>
-          <a href="#">Writers</a>
-          <a href="#">Blog</a>
-          <a href="#">Careers</a>
-          <a href="#">Privacy</a>
-          <a href="#">Terms</a>
-          <a href="#">About</a>
-          <a href="#">Knowable</a>
+        <div class="sticky-div">
+          <h2>Discover more of what matters to you</h2>
+          <div class="tags">
+            <ul>
+              <li>Programming</li>
+              <li>Data Science</li>
+              <li>Technology</li>
+              <li>Self Improvement</li>
+              <li>Writing</li>
+              <li>Relationships</li>
+              <li>Machine Learning</li>
+              <li>Productivity</li>
+              <li>Politics</li>
+            </ul>
+          </div>
+          <hr />
+          <div class="useful-links">
+            <a href="#">Help</a>
+            <a href="#">Status</a>
+            <a href="#">Writers</a>
+            <a href="#">Blog</a>
+            <a href="#">Careers</a>
+            <a href="#">Privacy</a>
+            <a href="#">Terms</a>
+            <a href="#">About</a>
+            <a href="#">Knowable</a>
+          </div>
         </div>
       </aside>
     </section>
