--- a/base_di_partenza/index.html
+++ b/base_di_partenza/index.html
@@ -13,10 +13,11 @@
       href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&family=Spectral:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;1,200;1,300;1,400;1,500;1,600;1,700;1,800&display=swap"
       rel="stylesheet"
     />
+    <script src="assets/scripts/script.js"></script>
     <title>Medium Clone</title>
   </head>
   <body>
-    <header class="primary-colour">
+    <header class="primary-colour" id="yellowToWhite">
       <div id="navigation">
         <img src="assets/imgs/svg/logo.svg" alt="Medium Logo" />
         <nav>
@@ -25,7 +26,7 @@
             <li>Membership</li>
             <li>Write</li>
             <li>Sign in</li>
-            <li><button class="black-btn">Get Started</button></li>
+            <li><button class="black-btn" id="greenBtn">Get Started</button></li>
           </ul>
         </nav>
       </div>
